--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 <div class="container">
                     <div class="section-header text-center">
                         <p>Frequently Asked Question</p>
-                        <h2>You May Ask</h2>
+                        <h2 id="Frequently-question">You May Ask</h2>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
@@ -1033,7 +1033,7 @@
                                 <a href="contact.html">Contact Us</a>
                                 <a href="team.html">Our Team</a>
                                 <a href="portfolio.html">Projects</a>
-                                <a href="service.html">Services</a>
+                                <a href="service.html.">Services</a>
                                 <!--<a href="">Testimonial</a>-->
                             </div>
                         </div>
@@ -1053,10 +1053,10 @@
                 </div>-->
                 <div class="container footer-menu">
                     <div class="f-menu">
-                        <a href="">Terms & Conditions</a>
-                        <a href="">Privacy policy</a>
-                        <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="blog.html">Terms & Conditions</a>
+                        <a href="single.html">Privacy policy</a>
+                        <a href="contact.html">Help</a>
+                        <a href="#Frequently-question">FQAs</a>
                     </div>
                 </div>
                 <div class="container copyright">
