--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
 
 
             <!-- Service Start -->
+            <section id="building-construction">
             <div class="service">
                 <div class="container">
                     <div class="section-header text-center">
@@ -503,6 +504,7 @@
                     </div>
                 </div>
             </div>
+        </section>
             <!-- Service End -->
 
 
@@ -635,6 +637,7 @@
             
 
             <!-- FAQs Start -->
+            <section id="faqs">
             <div class="faqs">
                 <div class="container">
                     <div class="section-header text-center">
@@ -753,6 +756,7 @@
                     </div>
                 </div>
             </div>
+        </section>
             <!-- FAQs End -->
 
 
@@ -1033,7 +1037,7 @@
                                 <a href="contact.html">Contact Us</a>
                                 <a href="team.html">Our Team</a>
                                 <a href="portfolio.html">Projects</a>
-                                <a href="service.html.">Services</a>
+                                <a href="service.html">Services</a>
                                 <!--<a href="">Testimonial</a>-->
                             </div>
                         </div>
@@ -1056,7 +1060,7 @@
                         <a href="blog.html">Terms & Conditions</a>
                         <a href="single.html">Privacy policy</a>
                         <a href="contact.html">Help</a>
-                        <a href="#Frequently-question">FQAs</a>
+                        <a href="#Frequently-question">FAQs</a>
                     </div>
                 </div>
                 <div class="container copyright">
