--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Opening Hour</h3>
-                                            <p>Mon - Fri, 8:00 - 9:00</p>
+                                            <p>Mon - Sat, 8:00 - 9:00 <br>Fri Closed</p>
                                         </div>
                                     </div>
                                 </div>
@@ -186,7 +186,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Email Us</h3>
-                                            <p>info@example.com</p>
+                                            <p>glorgensarch@gmail.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -216,14 +216,14 @@
                                 <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu">
-                                        <a href="blog.html" class="dropdown-item">Blog Page</a>
-                                        <a href="single.html" class="dropdown-item">Single Page</a>
+                                        <a href="blog.html" class="dropdown-item">Privacy Policy</a>
+                                        <a href="single.html" class="dropdown-item">Terms & Conditions</a>
                                     </div>
                                 </div>
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="#">Contact US</a>
+                                <a class="btn" href="contact.html">Contact US</a>
                             </div>
                         </div>
                     </nav>
@@ -355,24 +355,25 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
-                                <a href="">Building Construction</a>
-                                <a href="">House Renovation</a>
-                                <a href="">Architecture Design</a>
-                                <a href="">Interior Design</a>
-                                <a href="">Painting</a>
+                                <a href="index.html#building-construction">Building Construction</a>
+                                <a href="index.html#building-construction">House Renovation</a>
+                                <a href="index.html#building-construction">Architecture Design</a>
+                                <a href="index.html#building-construction">Interior Design</a>
+                                <a href="index.html#building-construction">Fixing & Support</a>
+                                <a href="index.html#building-construction">Painting</a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Useful Pages</h2>
-                                <a href="">About Us</a>
-                                <a href="">Contact Us</a>
-                                <a href="">Our Team</a>
-                                <a href="">Projects</a>
-                                <a href="">Testimonial</a>
+                                <a href="index.html">Home</a>
+                                <a href="contact.html">Contact Us</a>
+                                <a href="team.html">Our Team</a>
+                                <a href="portfolio.html">Projects</a>
+                                <a href="service.html">Services</a>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                        <!--<div class="col-md-6 col-lg-3">
                             <div class="newsletter">
                                 <h2>Newsletter</h2>
                                 <p>
@@ -385,20 +386,19 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="container footer-menu">
                     <div class="f-menu">
-                        <a href="">Terms of use</a>
-                        <a href="">Privacy policy</a>
-                        <a href="">Cookies</a>
-                        <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="blog.html">Terms & Conditions</a>
+                        <a href="single.html">Privacy policy</a>
+                        <a href="contact.html">Help</a>
+                        <a href="index.html#faqs">FAQs</a>
                     </div>
                 </div>
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="#">GLORGENS</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="index.html">GLORGENS</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
                             <p>Designed By <a href="https://techsz.netlify.app/">Techszdeveloper</a></p>
