--- a/contact.html
+++ b/contact.html
@@ -223,7 +223,7 @@
                                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="#">Get A Quote</a>
+                                <a class="btn" href="#">Contact US</a>
                             </div>
                         </div>
                     </nav>
@@ -379,10 +379,10 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="#">GLORGENS</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
-                            <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                            <p>Designed By <a href="https://techsz.netlify.app/">Techszdeveloper</a></p>
                         </div>
                     </div>
                 </div>
