--- a/about.html
+++ b/about.html
@@ -240,8 +240,8 @@
                             <h2>About Us</h2>
                         </div>
                         <div class="col-12">
-                            <a href="">Home</a>
-                            <a href="">About Us</a>
+                            <a href="index.html">Home</a>
+                            <a href="about.html">About Us</a>
                         </div>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
                                 <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                                <p><i class="fa fa-envelope"></i>info@example.com</p>
+                                <p><i class="fa fa-envelope"></i>glorgensarch@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
