--- a/service.html
+++ b/service.html
@@ -164,7 +164,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Opening Hour</h3>
-                                            <p>Mon - Fri, 8:00 - 9:00</p>
+                                            <p>Mon - Sat, 8:00 - 9:00 <br> Fri Closed</p>
                                         </div>
                                     </div>
                                 </div>
@@ -186,7 +186,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Email Us</h3>
-                                            <p>info@example.com</p>
+                                            <p>glorgensarch@gmail.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -216,14 +216,14 @@
                                 <div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu">
-                                        <a href="blog.html" class="dropdown-item">Blog Page</a>
-                                        <a href="single.html" class="dropdown-item">Single Page</a>
+                                        <a href="blog.html" class="dropdown-item">Privacy Policy</a>
+                                        <a href="single.html" class="dropdown-item">Terms & Conditions</a>
                                     </div>
                                 </div>
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
-                                <a class="btn" href="#">Contact US</a>
+                                <a class="btn" href="contact.html">Contact US</a>
                             </div>
                         </div>
                     </nav>
@@ -240,8 +240,8 @@
                             <h2>Our Services</h2>
                         </div>
                         <div class="col-12">
-                            <a href="">Home</a>
-                            <a href="">Our Services</a>
+                            <a href="index.html">Home</a>
+                            <a href="service.html">Our Services</a>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>Building Construction</h3>
-                                    <a class="btn" href="img/service-1.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -284,7 +283,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>House Renovation</h3>
-                                    <a class="btn" href="img/service-2.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -299,7 +297,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>Architecture Design</h3>
-                                    <a class="btn" href="img/service-3.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -314,7 +311,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>Interior Design</h3>
-                                    <a class="btn" href="img/service-4.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -329,7 +325,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>Fixing & Support</h3>
-                                    <a class="btn" href="img/service-5.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -345,7 +340,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>Painting</h3>
-                                    <a class="btn" href="img/service-6.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -365,7 +359,7 @@
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
                                 <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                                <p><i class="fa fa-envelope"></i>info@example.com</p>
+                                <p><i class="fa fa-envelope"></i>glorgensarch@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -378,24 +372,25 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
-                                <a href="">Building Construction</a>
-                                <a href="">House Renovation</a>
-                                <a href="">Architecture Design</a>
-                                <a href="">Interior Design</a>
-                                <a href="">Painting</a>
+                                <a href="index.html#building-construction">Building Construction</a>
+                                <a href="index.html#building-construction">House Renovation</a>
+                                <a href="index.html#building-construction">Architecture Design</a>
+                                <a href="index.html#building-construction">Interior Design</a>
+                                <a href="index.html#building-construction">Fixing & Support</a>
+                                <a href="index.html#building-construction">Painting</a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Useful Pages</h2>
-                                <a href="">About Us</a>
-                                <a href="">Contact Us</a>
-                                <a href="">Our Team</a>
-                                <a href="">Projects</a>
-                                <a href="">Testimonial</a>
+                                <a href="index.html">Home</a>
+                                <a href="about.html">About Us</a>
+                                <a href="contact.html">Contact Us</a>
+                                <a href="team.html">Our Team</a>
+                                <a href="portfolio.html">Projects</a>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                        <!--<div class="col-md-6 col-lg-3">
                             <div class="newsletter">
                                 <h2>Newsletter</h2>
                                 <p>
@@ -408,14 +403,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="container footer-menu">
                     <div class="f-menu">
-                        <a href="">Terms of use</a>
-                        <a href="">Privacy policy</a>
-                        <a href="">Cookies</a>
-                        <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="blog.html">Terms & Conditions</a>
+                        <a href="single.html">Privacy policy</a>
+                        <a href="contact.html">Help</a>
+                        <a href="index.html#faqs">FAQs</a>
                     </div>
                 </div>
                 <div class="container copyright">
