--- a/about.html
+++ b/about.html
@@ -261,7 +261,7 @@
                         <div class="col-lg-7 col-md-6">
                             <div class="section-header text-left">
                                 <p>Welcome to GLORGENS</p>
-                                <h2>1 Years Experience</h2>
+                                <h2>1 Year Experience</h2>
                             </div>
                             <div class="about-text">
                                 <p>
