--- a/service.html
+++ b/service.html
@@ -415,7 +415,7 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="#">GLORGENS</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="index.html">GLORGENS</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
                             <p>Designed By <a href="https://techsz.netlify.app/">Techszdeveloper</a></p>
