--- a/index.html
+++ b/index.html
@@ -1057,10 +1057,10 @@
                 </div>-->
                 <div class="container footer-menu">
                     <div class="f-menu">
-                        <a href="blog.html">Terms & Conditions</a>
-                        <a href="single.html">Privacy policy</a>
+                        <a href="single.html">Terms & Conditions</a>
+                        <a href="blog.html">Privacy policy</a>
                         <a href="contact.html">Help</a>
-                        <a href="#Frequently-question">FAQs</a>
+                        <a href="index.html#faqs">FAQs</a>
                     </div>
                 </div>
                 <div class="container copyright">
