--- a/team.html
+++ b/team.html
@@ -455,8 +455,8 @@
                 </div>-->
                 <div class="container footer-menu">
                     <div class="f-menu">
-                        <a href="blog.html">Terms & Conditions</a>
-                        <a href="single.html">Privacy policy</a>
+                        <a href="single.html">Terms & Conditions</a>
+                        <a href="blog.html">Privacy policy</a>
                         <a href="contact.html">Help</a>
                         <a href="index.html#faqs">FAQs</a>
                     </div>
