--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Call Us</h3>
-                                            <p>+012 345 6789</p>
+                                            <p>+91 7819939837</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1007,8 +1007,8 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-contact">
                                 <h2>Office Contact</h2>
-                                <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
-                                <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
+                                <p><i class="fa fa-map-marker-alt"></i>Ground FLoor, Palm view apartment, Pant Nagar, Lucknow - 226022</p>
+                                <p><i class="fa fa-phone-alt"></i>+91 7819939837</p>
                                 <p><i class="fa fa-envelope"></i>glorgensarch@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
