--- a/contact.html
+++ b/contact.html
@@ -372,7 +372,7 @@
                             
                                     // Function to send email
                                     function sendEmail(name, email, phone, subject, message) {
-                                        const recipientEmail = 'techszdeveloper@gmail.com';
+                                        const recipientEmail = 'glorgensarch@gmail.com';
                                         const mailtoLink = `mailto:${recipientEmail}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent('Phone: ' + phone + '\n\nMessage:\n' + message)}`;
                                         window.location.href = mailtoLink;
                                     }
