--- a/blog.html
+++ b/blog.html
@@ -253,11 +253,10 @@
             <div class="blog">
                 <div class="container">
                     <div class="section-header text-center">
-                        <p>Latest Blog</p>
-                        <h2>Latest From Our Blog</h2>
+                        <p>OUR</p>
+                        <h2>Privacy Policy</h2>
                     </div>
                     
-
 
                 </div>
             </div>
