--- a/single.html
+++ b/single.html
@@ -255,32 +255,65 @@
                     <div class="row">
                         <div class="col-lg-8">
                             <div class="single-content wow fadeInUp">
-                                <h2>Lorem ipsum dolor sit amet</h2>
+                                <h2>1. Introduction</h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer molestie, lorem eu eleifend bibendum, augue purus mollis sapien, non rhoncus eros leo in nunc. Donec a nulla vel turpis consectetur tempor ac vel justo. In hac habitasse platea dictumst. Cras nec sollicitudin eros. Nunc eu enim non turpis sagittis rhoncus consectetur id augue. Mauris dignissim neque felis. Phasellus mollis mi a pharetra cursus. Maecenas vulputate augue placerat lacus mattis, nec ornare risus sollicitudin.
+                                    Welcome to GLORGENS BUILDERS & DEVELOPERS. These Terms & Conditions govern your use of our website and services. By accessing our site or engaging with our services, you agree to comply with these Terms.
                                 </p>
+                                <br><br>
+                                <h2>2. Services</h2>
                                 <p>
-                                    Mauris eu pulvinar tellus, eu luctus nisl. Pellentesque suscipit mi eu varius pulvinar. Aenean vulputate, massa eget elementum finibus, ipsum arcu commodo est, ut mattis eros orci ac risus. Suspendisse ornare, massa in feugiat facilisis, eros nisl auctor lacus, laoreet tempus elit dolor eu lorem. Nunc a arcu suscipit, suscipit quam quis, semper augue.
+                                    GLORGENS BUILDERS & DEVELOPERS provides architectural, construction, interior design, and related consultancy services. All services will be delivered as per the agreed contract and specifications. Any changes or additions to the scope of work must be documented in writing and may result in additional charges.
                                 </p>
+                                <br><br>
+                                <h2>3. Client Obligations You agree to:</h2>
                                 <p>
-                                    Quisque arcu nulla, convallis nec orci vel, suscipit elementum odio. Curabitur volutpat velit non diam tincidunt sodales. Nullam sapien libero, bibendum nec viverra in, iaculis ut eros.
+                                    Provide accurate information about your project and cooperate with GLORGENS BUILDERS & DEVELOPERS to facilitate the timely delivery of services.
+                                    Ensure all required permits, licenses, and regulatory approvals are obtained prior to the commencement of the project unless otherwise agreed.
                                 </p>
-                                <h3>Lorem ipsum dolor sit amet</h3>
+                                <br><br>
+                                <h2>4. Project Timeline</h2>
                                 <p>
-                                    Vestibulum sit amet ullamcorper sem. Integer hendrerit elit eget purus sodales maximus. Quisque ac nulla arcu. Morbi venenatis arcu ac arcu cursus pharetra. Morbi sit amet viverra augue, ac ultricies libero. Praesent elementum lectus mi, eu elementum urna venenatis sed. Donec auctor purus ut mattis feugiat. Integer mi erat, consectetur sed tincidunt vitae, sagittis elementum libero. Vivamus a mauris consequat, hendrerit lectus in, fermentum libero. Integer mattis bibendum neque et porttitor.
+                                    GLORGENS BUILDERS & DEVELOPERS will endeavor to complete projects within the agreed timeframes. However, delays caused by unforeseen circumstances, including weather conditions, supply shortages, or third-party issues, are not the responsibility of GLORGENS BUILDERS & DEVELOPERS.
                                 </p>
+                                <br><br>
+                                <h2>5. Payment Terms</h2>
                                 <p>
-                                    Mauris quis arcu finibus, posuere dolor eu, viverra felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In porta, ex vitae accumsan facilisis, nisi tellus dictum metus, quis fringilla dui tellus in tellus. Praesent pharetra orci at vehicula posuere. Sed molestie fringilla lorem, vel imperdiet tortor blandit at. Quisque non ultrices lorem, eget rhoncus orci. Fusce porttitor placerat diam et mattis. Nam laoreet, ex eu posuere sollicitudin, sem tortor pellentesque ipsum, quis mattis purus lectus ut lacus. Integer eu risus ac est interdum scelerisque.
+                                    Payment terms will be outlined in the individual project contract. Failure to make payments on time may result in project delays, additional fees, or termination of the contract. Any disputes regarding invoices must be raised within 7 days of receipt.
                                 </p>
-                                <h4>Lorem ipsum dolor sit amet</h4>
+                                <br><br>
+                                <h2>6. Liability</h2>
                                 <p>
-                                    Praesent ultricies, mauris eget vestibulum viverra, neque lorem malesuada mauris, eget rhoncus lectus enim a lorem. Vivamus at vehicula risus, eget facilisis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et posuere sapien. Fusce bibendum lorem sem, quis tincidunt felis mattis nec.
+                                    GLORGENS BUILDERS & DEVELOPERS will not be liable for: <br><br>
+                                    Any indirect, incidental, or consequential damages resulting from project delays or issues beyond our control.
+                                    Structural issues caused by the client’s failure to disclose relevant information about the project site or existing structures.
                                 </p>
+                                <br><br>
+                                <h2>7. Warranty</h2>
                                 <p>
-                                    Proin vel nulla purus. Nunc nec eros in nisi efficitur rutrum quis sed eros. Mauris felis dolor, rhoncus eget gravida vitae, pretium vel arcu. Cras blandit tellus eget tellus dictum venenatis. Sed ultricies bibendum dictum. Etiam facilisis erat id turpis tincidunt malesuada. Duis bibendum sapien eu condimentum sagittis. Proin nunc lorem, ullamcorper vel tortor sodales, imperdiet lacinia dui. Sed congue, felis id rhoncus varius, urna lacus imperdiet nunc, ut porttitor mauris mi quis mi. Integer rutrum est finibus metus eleifend scelerisque. Morbi auctor dignissim purus in interdum. Vestibulum eu dictum enim. Suspendisse et sem vitae velit feugiat facilisis.
+                                    All construction and architectural services come with a warranty, as specified in the contract. Warranty terms may vary depending on the nature of the service provided. Defects or issues arising from misuse, unauthorized modifications, or natural disasters are not covered under warranty.
                                 </p>
+                                <br><br>
+                                <h2>8. Changes to the Terms</h2>
                                 <p>
-                                    Nam sodales scelerisque nunc sed convallis. Vestibulum facilisis porta erat, sit amet pharetra tortor blandit id. Nunc velit tellus, consectetur sed convallis in, tincidunt finibus nulla. Integer vel ex in mauris tincidunt tincidunt nec sed elit. Etiam pretium lectus lectus, sed aliquet erat tristique euismod. Praesent faucibus nisl augue, ac tempus libero pellentesque malesuada. Vivamus iaculis imperdiet laoreet. Aliquam vel felis felis. Proin sed sapien erat. Etiam a quam et metus tempor rutrum. Curabitur in faucibus justo. Etiam imperdiet iaculis urna.
+                                    GLORGENS BUILDERS & DEVELOPERS reserves the right to update these Terms & Conditions at any time. Changes will be effective upon posting to our website or communicated directly to clients.
+                                </p>
+                                <br><br>
+                                <h2>9. Intellectual Property</h2>
+                                <p>
+                                    All designs, drawings, and other materials provided by GLORGENS BUILDERS & DEVELOPERS remain the intellectual property of the company and cannot be used, replicated, or distributed without our written consent.
+                                </p>
+                                <br><br>
+                                <h2>10. Governing Law</h2>
+                                <p>
+                                    These Terms & Conditions are governed by and construed in accordance with the laws of India. Any disputes arising under or in connection with these Terms shall be subject to the exclusive jurisdiction of the courts in Uttar Pradesh.
+                                </p>
+                                <br><br>
+                                <h2>11. Contact Information</h2>
+                                <p>
+                                    If you have any questions regarding these Terms & Conditions, please contact us at: <br><br>
+                                    Email: glorgensarch@gmail.com <br>
+                                    Phone: +91-7819939837 <br>
+                                    Address: Glorgens Builders & Developers, Palm view apartment, Pant Nagar, Khurram Nagar, Lucknow - 226022, Uttar Pradesh, India
                                 </p>
                             </div>
                             <!--<div class="single-tags wow fadeInUp">
