--- a/team.html
+++ b/team.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <title>GLORGENS BUILDERS & DEVELOPERS</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="GLORGENS BUILDERS & DEVELOPERS" name="keywords">
-        <meta content="GLORGENS BUILDERS & DEVELOPERS" name="description">
+        <meta property="og:image" content="img/favicon.png" />
         <meta name="description" content="GLORGENS BUILDERS & DEVELOPERS Specializes in architectural design, interior design, and construction services. We create stunning residential and commercial spaces in Uttar Pradesh and across India, focusing on sustainability and luxury.">
         <meta name="keywords" content="
             architectural design, interior design, construction services, luxury home builders, 
@@ -121,14 +120,6 @@
             India construction companies, international architecture, sustainable urban development, 
             smart city design, luxury residential projects, contemporary architecture
         ">
-         <!-- Open Graph meta tags -->
-    <meta property="og:title" content="GLORGENS BUILDERS & DEVELOPERS" />
-    <meta property="og:description" content="Providing high-quality architectural and interior design services." />
-    <meta property="og:image" content="https://www.glorgens.in/img/favicon.png" />
-    <meta property="og:url" content="https://www.glorgens.in/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="GLORGENS BUILDERS & DEVELOPERS" />
-    <meta property="og:locale" content="en_US" />
         <!-- Favicon -->
         <link rel="website icon" type="png" href="img/favicon.png">
 
