--- a/service.html
+++ b/service.html
@@ -282,7 +282,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Email Us</h3>
-                                            <p>glorgensarch@gmail.com</p>
+                                            <p>info@glorgensbd.in</p>
                                         </div>
                                     </div>
                                 </div>
@@ -455,7 +455,7 @@
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>Ground FLoor, Palm view apartment, Pant Nagar, Lucknow - 226022</p>
                                 <p><i class="fa fa-phone-alt"></i>+91 7819939837</p>
-                                <p><i class="fa fa-envelope"></i>glorgensarch@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>info@glorgensbd.in</p>
                                 <div class="footer-social">
                                     <a href="https://x.com/GLORGENSBD"><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.facebook.com/profile.php?id=61567528773037"><i class="fab fa-facebook-f"></i></a>
