--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/clients.png" alt="Team Image">
+                                    <img src="img/team-1.png" alt="Team Image">
                                 </div>
                                 <div class="team-text">
                                     <h2>Abdullah Khan</h2>
@@ -678,7 +678,7 @@
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/clients.png" alt="Team Image">
+                                    <img src="img/team-2.png" alt="Team Image">
                                 </div>
                                 <div class="team-text">
                                     <h2>Mudassir Khan</h2>
@@ -695,7 +695,7 @@
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/clients.png" alt="Team Image">
+                                    <img src="img/team-3.png" alt="Team Image">
                                 </div>
                                 <div class="team-text">
                                     <h2>Afroj Ahmad</h2>
@@ -712,7 +712,7 @@
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="img/clients.png" alt="Team Image">
+                                    <img src="img/" alt="Team Image">
                                 </div>
                                 <div class="team-text">
                                     <h2>Faizur Rahman</h2>
