--- a/blog.html
+++ b/blog.html
@@ -359,7 +359,7 @@
                             <div class="single-content wow fadeInUp">
                                 <h2>Privacy Policy</h2>
                                 <p>
-                                    At GLORGENS BUILDERS & DEVELOPERS, we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your personal information when you visit our website or engage with our services.
+                                    At GLORGENS BUILDERS & DEVELOPERS pvt. Ltd. , we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your personal information when you visit our website or engage with our services.
                                 </p>
                                 <br><br>
 
@@ -384,9 +384,9 @@
 
                                 <h2>3. Sharing Your Information</h2>
                                 <p>
-                                    GLORGENS BUILDERS & DEVELOPERS will not sell, rent, or trade your personal information with third parties. However, we may share your information under the following circumstances: <br>
+                                    GLORGENS BUILDERS & DEVELOPERS pvt. Ltd.  will not sell, rent, or trade your personal information with third parties. However, we may share your information under the following circumstances: <br>
                                     With Third-Party Service Providers: We may share your information with trusted third-party vendors to perform tasks on our behalf, such as payment processing, email communication, and website analytics. <br><br>
-                                    Legal Requirements: We may disclose your information if required by law or to protect the rights, property, or safety of GLORGENS BUILDERS & DEVELOPERS, our clients, or others.
+                                    Legal Requirements: We may disclose your information if required by law or to protect the rights, property, or safety of GLORGENS BUILDERS & DEVELOPERS pvt. Ltd. , our clients, or others.
                                 </p>
                                 <br><br>
                                 <h2>4. Cookies and Tracking Technologies</h2>
@@ -411,12 +411,12 @@
                                     Correction: If any information is inaccurate or incomplete, you can request a correction.
                                     Deletion: You can request the deletion of your personal data, subject to legal obligations.
                                     Opt-out: You can unsubscribe from marketing communications at any time.
-                                    To exercise any of these rights, please contact us at  <b>glorgensarch@gmail.com.</b>
+                                    To exercise any of these rights, please contact us at  <b>info@glorgensbd.in</b>
                                 </p>
                                 <br><br>
                                 <h2>8. Third-Party Links</h2>
                                 <p>
-                                    Our website may contain links to external sites. Please note that we are not responsible for the privacy practices of those websites, and this Privacy Policy applies only to GLORGENS BUILDERS & DEVELOPERS.
+                                    Our website may contain links to external sites. Please note that we are not responsible for the privacy practices of those websites, and this Privacy Policy applies only to GLORGENS BUILDERS & DEVELOPERS pvt. Ltd. .
                                 </p>
                                 <br><br>
                                 <h2>9. Changes to This Policy</h2>
@@ -427,9 +427,9 @@
                                 <h2>10. Contact Us</h2>
                                 <p>
                                     If you have any questions or concerns about this Privacy Policy, please contact us at: <br><br>
-                                    Email: glorgensarch@gmail.com <br>
+                                    Email: info@glorgensbd.in <br>
                                     Phone: +91-7819939837 <br>
-                                    Address: Glorgens Builders & Developers, Palm view apartment, Pant Nagar, Khurram Nagar, Lucknow - 226022, Uttar Pradesh, India
+                                    Address: Glorgens Builders & Developers pvt. Ltd. , Palm view apartment, Pant Nagar, Khurram Nagar, Lucknow - 226022, Uttar Pradesh, India
                                 </p>
                                 
                                 </div>
