--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    At GLORGENS BUILDERS & DEVELOPERS, we specialize in providing comprehensive design and construction solutions for residential, commercial, industrial, and institutional projects. Our expertise spans from site analysis and conceptual design to detailed schematics and execution, ensuring precision and quality at every stage. We are committed to transforming spaces through innovative interior and exterior designs, incorporating sustainable construction practices and aesthetic enhancements.
+                                    At GLORGENS BUILDERS & DEVELOPERS pvt. Ltd. , we specialize in providing comprehensive design and construction solutions for residential, commercial, industrial, and institutional projects. Our expertise spans from site analysis and conceptual design to detailed schematics and execution, ensuring precision and quality at every stage. We are committed to transforming spaces through innovative interior and exterior designs, incorporating sustainable construction practices and aesthetic enhancements.
                                 </p>
                                 <p>
                                     In addition to our design services, we offer full project management, covering feasibility studies, budgeting, procurement, and construction supervision. By collaborating with contractors and industry professionals, we ensure strict adherence to safety standards and regulatory requirements. Our capabilities also extend to urban planning and landscape design, creating functional and beautiful spaces for both public and private use.
