--- a/single.html
+++ b/single.html
@@ -353,23 +353,23 @@
                             <div class="single-content wow fadeInUp">
                                 <h2>1. Introduction</h2>
                                 <p>
-                                    Welcome to GLORGENS BUILDERS & DEVELOPERS. These Terms & Conditions govern your use of our website and services. By accessing our site or engaging with our services, you agree to comply with these Terms.
+                                    Welcome to GLORGENS BUILDERS & DEVELOPERS pvt. Ltd. . These Terms & Conditions govern your use of our website and services. By accessing our site or engaging with our services, you agree to comply with these Terms.
                                 </p>
                                 <br><br>
                                 <h2>2. Services</h2>
                                 <p>
-                                    GLORGENS BUILDERS & DEVELOPERS provides architectural, construction, interior design, and related consultancy services. All services will be delivered as per the agreed contract and specifications. Any changes or additions to the scope of work must be documented in writing and may result in additional charges.
+                                    GLORGENS BUILDERS & DEVELOPERS pvt. Ltd.  provides architectural, construction, interior design, and related consultancy services. All services will be delivered as per the agreed contract and specifications. Any changes or additions to the scope of work must be documented in writing and may result in additional charges.
                                 </p>
                                 <br><br>
                                 <h2>3. Client Obligations You agree to:</h2>
                                 <p>
-                                    Provide accurate information about your project and cooperate with GLORGENS BUILDERS & DEVELOPERS to facilitate the timely delivery of services.
+                                    Provide accurate information about your project and cooperate with GLORGENS BUILDERS & DEVELOPERS pvt. Ltd.  to facilitate the timely delivery of services.
                                     Ensure all required permits, licenses, and regulatory approvals are obtained prior to the commencement of the project unless otherwise agreed.
                                 </p>
                                 <br><br>
                                 <h2>4. Project Timeline</h2>
                                 <p>
-                                    GLORGENS BUILDERS & DEVELOPERS will endeavor to complete projects within the agreed timeframes. However, delays caused by unforeseen circumstances, including weather conditions, supply shortages, or third-party issues, are not the responsibility of GLORGENS BUILDERS & DEVELOPERS.
+                                    GLORGENS BUILDERS & DEVELOPERS pvt. Ltd.  will endeavor to complete projects within the agreed timeframes. However, delays caused by unforeseen circumstances, including weather conditions, supply shortages, or third-party issues, are not the responsibility of GLORGENS BUILDERS & DEVELOPERS pvt. Ltd. .
                                 </p>
                                 <br><br>
                                 <h2>5. Payment Terms</h2>
@@ -379,7 +379,7 @@
                                 <br><br>
                                 <h2>6. Liability</h2>
                                 <p>
-                                    GLORGENS BUILDERS & DEVELOPERS will not be liable for: <br><br>
+                                    GLORGENS BUILDERS & DEVELOPERS pvt. Ltd.  will not be liable for: <br><br>
                                     Any indirect, incidental, or consequential damages resulting from project delays or issues beyond our control.
                                     Structural issues caused by the client’s failure to disclose relevant information about the project site or existing structures.
                                 </p>
@@ -391,12 +391,12 @@
                                 <br><br>
                                 <h2>8. Changes to the Terms</h2>
                                 <p>
-                                    GLORGENS BUILDERS & DEVELOPERS reserves the right to update these Terms & Conditions at any time. Changes will be effective upon posting to our website or communicated directly to clients.
+                                    GLORGENS BUILDERS & DEVELOPERS pvt. Ltd.  reserves the right to update these Terms & Conditions at any time. Changes will be effective upon posting to our website or communicated directly to clients.
                                 </p>
                                 <br><br>
                                 <h2>9. Intellectual Property</h2>
                                 <p>
-                                    All designs, drawings, and other materials provided by GLORGENS BUILDERS & DEVELOPERS remain the intellectual property of the company and cannot be used, replicated, or distributed without our written consent.
+                                    All designs, drawings, and other materials provided by GLORGENS BUILDERS & DEVELOPERS pvt. Ltd.  remain the intellectual property of the company and cannot be used, replicated, or distributed without our written consent.
                                 </p>
                                 <br><br>
                                 <h2>10. Governing Law</h2>
