--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
             <!-- Video End -->
 
 
-            <!-- Team Start -->
+            <!-- Team Start 
             <div class="team">
                 <div class="container">
                     <div class="section-header text-center">
@@ -667,12 +667,12 @@
                                     <h2>Abdullah Khan</h2>
                                     <p>Director</p>
                                 </div>
-                                <!--<div class="team-social">
+                                <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
@@ -684,12 +684,12 @@
                                     <h2>Mudassir Khan</h2>
                                     <p>Architect</p>
                                 </div>
-                                <!--<div class="team-social">
+                                <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -701,12 +701,12 @@
                                     <h2>Afroj Ahmad</h2>
                                     <p>Construction Manager</p>
                                 </div>
-                                <!--<div class="team-social">
+                                <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -718,18 +718,18 @@
                                     <h2>Faizur Rahman</h2>
                                     <p>Bim architect</p>
                                 </div>
-                                <!--<div class="team-social">
+                                <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Team End -->
+             Team End -->
             
 
             <!-- FAQs Start -->
