--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>GLORGENS BUILDERS & DEVELOPERS</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta property="og:image" content="img/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="GLORGENS BUILDERS & DEVELOPERS Specializes in architectural design, interior design, and construction services. We create stunning residential and commercial spaces in Uttar Pradesh and across India, focusing on sustainability and luxury.">
         <meta name="keywords" content="
             architectural design, interior design, construction services, luxury home builders, 
@@ -217,6 +216,15 @@
             modern beachfront homes, lakehouse designs, waterfront property architecture, outdoor kitchen design, 
             alfresco dining spaces, pergola design, garden furniture layout, fire pit design, outdoor lounge areas
         ">
+                 <!-- Open Graph tags for link previews -->
+<meta property="og:title" content="GLORGENS BUILDERS & DEVELOPERS" />
+<meta property="og:description" content="Specializing in architectural design, interior design, and construction services across India, with a focus on sustainability and luxury." />
+<meta property="og:image" content="img/favicon.png" />
+<meta property="og:url" content="https://glorgensbd.in" />
+<meta property="og:type" content="website" />
+
+
+
         <!-- Favicon -->
         <link rel="website icon" type="png" href="img/favicon.png">
 
