--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:image" content="https://github.com/Glorgens/GBD/blob/main/favicon.png">
         <meta property="og:url" content="https://glorgensbd.in">
         <meta property="og:title" content="GLORGENS BUILDERS & DEVELOPERS">
-        <meta property="og:description" content="GLORGENS BUILDERS & DEVELOPERS pvt. ltd. Specializes in architectural design, interior design, and construction services. We create stunning residential and commercial spaces in Uttar Pradesh and across India, focusing on sustainability and luxury.">
+        <meta property="og:description" content="Glorgens Builders & Developers pvt. ltd. Specializes in architectural design, interior design, and construction services. We create stunning residential and commercial spaces in Uttar Pradesh and across India, focusing on sustainability and luxury.">
         <meta name="keywords" content="
             architectural design, interior design, construction services, luxury home builders, 
             residential architecture, commercial architecture, sustainable building, 
@@ -210,7 +210,7 @@
             alfresco dining spaces, pergola design, garden furniture layout, fire pit design, outdoor lounge areas
         ">
         <!-- Favicon -->
-        <link rel="website icon" type="png" href="img/favicon.png">
+        <link rel="website icon" type="png" href="favicon.png">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
