--- a/index.html
+++ b/index.html
@@ -422,8 +422,7 @@
                         </div>
                         <div class="col-lg-7 col-md-6">
                             <div class="section-header text-left">
-                                <p>Welcome to GLORGENS</p>
-                                <h2>1 Year Experience</h2>
+                                <h1>Welcome to GLORGENS</h1>
                             </div>
                             <div class="about-text">
                                 <p>
@@ -441,7 +440,7 @@
             <!-- About End -->
 
 
-            <!-- Fact Start -->
+            <!-- Fact Start 
             <div class="fact">
                 <div class="container-fluid">
                     <div class="row counters">
@@ -492,7 +491,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Fact End -->
+             Fact End -->
 
 
             <!-- Service Start -->
