--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="blog-item">
                                 <div class="blog-img">
-                                    <img src="img/projects1.jpeg" alt="Image">
+                                    <img src="img/mp1.jpeg" alt="Image">
                                 </div>
                                 <div class="blog-title">
                                     <h3>Interior Design</h3>
@@ -941,7 +941,7 @@
                         <div class="col-lg-4 col-md-6 wow fadeInUp">
                             <div class="blog-item">
                                 <div class="blog-img">
-                                    <img src="img/projects4.jpeg" alt="Image">
+                                    <img src="img/mp2.jpeg" alt="Image">
                                 </div>
                                 <div class="blog-title">
                                     <h3>Interior Design</h3>
